--- a/desafio12/style.css
+++ b/desafio12/style.css
@@ -4,32 +4,38 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
 
-* {
-    margin: 0;
-    padding: 0;
-}
-
 :root {
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
     --fonte2: 'Passion One';
     --fonte3: 'Sriracha';
 }
 
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body {
+    min-height: 100vh;
+    background-color: darkgray;
+    font-family: var(--fonte1);
+}
+
 header {
     background-color: black;
     color: white;
     text-align: center;
-    padding: 50px;
-}
-
-header p {
-    font-family: var(--fonte1);
 }
 
 header h1 {
+    padding-top: 50px;
     font-family: var(--fonte2);
-    font-size: 9em;
     font-variant: small-caps;
+    font-size: 10vw;
+}
+
+header p {
+    padding-bottom: 50px;
 }
 
 a {
@@ -43,18 +49,27 @@ a:hover {
 }
 
 main p {
-    font-family: var(--fonte3);
+
 }
 
 section {
-    font-size: 50px;
+    font-size: 3.5vw;
     padding-top: 10vh;
     padding-bottom: 10vh;
     padding-left: 30px;
+    line-height: 2em;
+    font-family: var(--fonte3);
 }
 
 section.normal {
-    max-width: 600px;
+    background-color: white;
+    color: black;
+}
+
+section.imagem > p {
+    display: inline-block;
+    padding: 5px;
+    background-color: black;
 }
 
 .imagem1 {
@@ -84,6 +99,5 @@ footer {
     background-color: black;
     color: white;
     text-align: center;
-    font-family: var(--fonte1);
     padding: 10px;
 }
