--- a/desafio12/style.css
+++ b/desafio12/style.css
@@ -2,17 +2,18 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Sriracha&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
 
 :root {
     --fonte1: Verdana, Geneva, Tahoma, sans-serif;
-    --fonte2: 'Passion One';
-    --fonte3: 'Sriracha';
+    --fonte2: 'Passion One', cursive;
+    --fonte3: 'Sriracha', cursive;
 }
 
 * {
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 
 html, body {
@@ -27,37 +28,37 @@ header {
     text-align: center;
 }
 
-header h1 {
+header > h1 {
     padding-top: 50px;
-    font-family: var(--fonte2);
     font-variant: small-caps;
+    font-family: var(--fonte2);
     font-size: 10vw;
 }
 
-header p {
+header > p {
     padding-bottom: 50px;
 }
 
-a {
-    text-decoration: none;
+header a, footer a {
     color: white;
-    font-weight: bold;
+    text-decoration: none;
+    font-weight: bolder;
 }
 
-a:hover {
+header a:hover, footer a:hover {
     text-decoration: underline;
 }
 
 section {
-    font-size: 3.5vw;
     padding-top: 10vh;
     padding-bottom: 10vh;
-    padding-left: 30px;
     line-height: 2em;
+    padding-left: 30px;
     font-family: var(--fonte3);
+    font-size: 3.5vw;
 }
 
-section p {
+section > p {
     padding-bottom: 2em;
 }
 
@@ -69,7 +70,7 @@ section.normal {
 section.imagem {
     background-color: rgb(51, 51, 51);
     color: white;
-    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.455);
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
     background-size: cover;
     background-attachment: fixed;
 }
@@ -77,18 +78,19 @@ section.imagem {
 section.imagem > p {
     display: inline-block;
     padding: 5px;
-    background-color: rgba(0, 0, 0, 0.587);
+    background-color: rgba(0, 0, 0, 0.514);
     text-shadow: 1px 1px 0px black;
 }
 
-#img01 {
+section#img01 {
     background-image: url('./imagens/background001.jpg');
     background-position: right center;
+    
 }
 
-#img02 {
+section#img02 {
     background-image: url('./imagens/background002.jpg');
-    background-position: right center;
+    
 }
 
 footer {
