--- a/desafio12/style.css
+++ b/desafio12/style.css
@@ -82,13 +82,13 @@ section.imagem > p {
     text-shadow: 1px 1px 0px black;
 }
 
-section#img01 {
+#img01 {
     background-image: url('./imagens/background001.jpg');
     background-position: right center;
     
 }
 
-section#img02 {
+#img02 {
     background-image: url('./imagens/background002.jpg');
     
 }
