--- a/desafio12/style.css
+++ b/desafio12/style.css
@@ -67,6 +67,13 @@ section.normal {
     color: black;
 }
 
+section.imagem {
+    background-color: rgb(51, 51, 51);
+    color: white;
+    box-shadow: inset 6px 6px 13px 0px rgba(0, 0, 0, 0.473);
+    background-size: cover;
+    background-attachment: fixed;
+}
 
 section.imagem > p {
     display: inline-block;
