--- a/ex026/mq002/estilos/paisagem.css
+++ b/ex026/mq002/estilos/paisagem.css
@@ -1,3 +1,8 @@
 @charset "UTF-8";
 
 /* Aparelho no estilo paisagem (deitado) */
+
+body {
+    background-image: url(../imagens/cev-landscape.jpg);
+    background-position: left bottom;
+}
