--- a/ex026/mq002/estilos/retrato.css
+++ b/ex026/mq002/estilos/retrato.css
@@ -2,7 +2,8 @@
 
 /* Aparelho no estilo retrato (em pé) */
 
-html {
-    
+body {
+    background-image: url(../imagens/cev-portrait.jpg);
+    background-position: center bottom;
 }
 
